experimental/ir/testdata/extend/import_private.proto.yaml.stderr.txt
warning: unused import "b.proto"
  --> b.proto:4:8
   |
 4 | import "a.proto";
   |        ^^^^^^^^^
  help: delete it
   |
 4 | - import "a.proto";
   |
   = help: no symbols from this file are referenced

warning: unused import "c.proto"
  --> c.proto:4:8
   |
 4 | import "b.proto";
   |        ^^^^^^^^^
  help: delete it
   |
 4 | - import "b.proto";
   |
   = help: no symbols from this file are referenced

error: cannot find `M` in this scope
  --> c.proto:6:8
   |
 6 | extend M {
   |        ^ not found in this scope
   = help: the full name of this scope is `test`

error: cannot find `test.M` in this scope
  --> c.proto:10:8
   |
10 | extend test.M {
   |        ^^^^^^ not found in this scope
   = help: the full name of this scope is `test`

error: cannot find `.test.M` in this scope
  --> c.proto:14:8
   |
14 | extend .test.M {
   |        ^^^^^^^ not found in this scope
   = help: the full name of this scope is `test`

encountered 3 errors and 2 warnings
